@@ -5,6 +5,7 @@ ChangeLog - 2004-01-21
 
 
 Version 0.0.5 (under dev!):
+   * fixed QUIT IRC command: now sent to all connected servers (not only current)
    * new Perl script function to display message in info bar ("IRC::print_infobar")
    * info bar timestamp is added to config ("look_infobar_timestamp")
    * added info bar (optional, "look_infobar" to enable it, "on" by default)
